--- a/Test/resources/valid-with-explicit-base.html
+++ b/Test/resources/valid-with-explicit-base.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML+RDFa 1.0//EN" "http://www.w3.org/MarkUp/DTD/xhtml-rdfa-1.dtd">
 <html xmlns:dc='http://purl.org/dc/terms/' 
       xmlns:foaf='http://xmlns.com/foaf/0.1/' 
-      xmlns:spdx="http://spdx.org/ont#"
+      xmlns:spdx="http://spdx.org/rdf/terms#"
       xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <title>Valid rdfa test case</title>
