Completed LicenseRdfA parser update for the SPDX 2.0 licenses
Signed-off-by: goneall <gary@sourceauditor.com>

--- a/resources/htmlTemplate/ExceptionHTMLTemplate.html
+++ b/resources/htmlTemplate/ExceptionHTMLTemplate.html
@@ -79,6 +79,11 @@
 <h2 style="color: #003F69;" id="notes">Notes</h2>
     <p style="margin-left: 20px;">{{notes}}</p>
 
+{{#example}}
+<h2 style="color: #003F69;" id="examples">Example of Use</h2>
+    <p style="margin-left: 20px;">{{example}}</p>
+{{/example}}
+    
 <h2 style="color: #003F69;" id="licenseExceptionText">Text</h2>
 
 <div property="spdx:licenseExceptionText" class="exception-text">
