--- a/resources/htmlTemplate/ExceptionsTocHTMLTemplate.html
+++ b/resources/htmlTemplate/ExceptionsTocHTMLTemplate.html
@@ -10,7 +10,7 @@
 <head>
   <title>SPDX License Exceptions List</title>
   <link rel="shortcut icon" href="sites/all/themes/spdx/favicon.ico" type="image/x-icon" />
-  <link rel="stylesheet" href="screen-v1.css" media="screen" type="text/css" />
+  <link rel="stylesheet" href="screen.css" media="screen" type="text/css" />
   <link type="text/css" rel="stylesheet" media="all" href="sites/all/themes/spdx/universe_nav.css?a" />
   <link type="text/css" rel="stylesheet" media="all" href="sites/all/themes/spdx/style.css?a" />
   <link type="text/css" rel="stylesheet" media="all" href="sites/all/themes/spdx/zen.css?a" />
@@ -62,7 +62,7 @@
 <p>Other information relevant to the SPDX License List:</p>
 <ul style="list-style-type: square; padding: 5px;">
       <li style="margin:0px 0 5px 10px;"><a href="http://spdx.org/spdx-license-list/license-list-overview">Overview</a>: For general information about the SPDX License List, including principles for inclusion of a license and an explanation of the field contained on the list.</li>
-      <li style="margin:0px 0 5px 10px;"><a href="../index.html">License List</a>: For a list of common open source licenses.</li>
+      <li style="margin:0px 0 5px 10px;"><a href="index.html">License List</a>: For a list of common open source licenses.</li>
       <li style="margin:5px 0 5px 10px;"><a href="http://spdx.org/spdx-license-list/request-new-license">Request New License</a>: For instructions on how to propose additional licenses be added to the SPDX License List.</li>
       <li style="margin:5px 0 5px 10px;"><a href="http://spdx.org/spdx-license-list/matching-guidelines">Matching Guidelines</a>:  Guidelines for what constitutes a license match to the SPDX License List when generating an SPDX file.</li>
       <li style="margin:5px 0 5px 10px;"><a href="http://git.spdx.org/?p=license-list.git;a=summary">Master Files</a>:  The HTML pages you see here are generated from the master files for the SPDX License List.  The master files include both a spreadsheet listing all the licenses and fields; and the text for each license in a .txt file.  These files are available in a Git repository.</li>
