--- a/resources/htmlTemplate/LicenseHTMLTemplate.html
+++ b/resources/htmlTemplate/LicenseHTMLTemplate.html
@@ -94,12 +94,10 @@
 </div>
 
 <h2 style="color: #003F69;"  id="licenseText">Standard License Header</h2>
-<div property="spdx:standardLicenseHeader" class="license-text">{{licenseHeader}}</div>
-
-{{#licenseTemplate}}
-<h2 style="color: #003F69;"  id=standardLicenseTemplate>License Template</h2>
-<div property="spdx:licenseTemplate" class="license-template">{{&licenseTemplate}}</div>
-{{/licenseTemplate}}
+<div property="spdx:standardLicenseHeader" class="license-text">
+  {{^licenseHeader}}<p style="font-style: italic">There is no standard license header for the license</p>{{/licenseHeader}}
+  {{licenseHeader}}
+</div>
 
     <div id="bottom-links" class="clearfix" style="margin-right: 10px;margin-top:20px;background:#ADDAF2;color:#000;"><div class="region region-bottom-links">
   <div id="block-block-1" class="block block-block first region-odd odd region-count-1 count-9" style="width:225px;padding:10px;float:left;">
