Added automatic generation of SPDX References to SPDX elements.  Completed unit testing SpdxFile
Signed-off-by: goneall <gary@sourceauditor.com>

--- a/resources/htmlTemplate/ExceptionsTocHTMLTemplate.html
+++ b/resources/htmlTemplate/ExceptionsTocHTMLTemplate.html
@@ -8,12 +8,11 @@
       xmlns:xsd="http://www.w3.org/2001/XMLSchema"
       xmlns:spdx="http://spdx.org/rdf/terms#">
 <head>
-  <title>SPDX License Exceptions List</title>
+  <title>License Exceptions</title>
   <link rel="shortcut icon" href="sites/all/themes/spdx/favicon.ico" type="image/x-icon" />
-  <link rel="stylesheet" href="screen.css" media="screen" type="text/css" />
-  <link type="text/css" rel="stylesheet" media="all" href="sites/all/themes/spdx/universe_nav.css?a" />
   <link type="text/css" rel="stylesheet" media="all" href="sites/all/themes/spdx/style.css?a" />
-  <link type="text/css" rel="stylesheet" media="all" href="sites/all/themes/spdx/zen.css?a" />
+    <link rel="stylesheet" href="screen.css" media="screen" type="text/css" />
+
   <script type="text/javascript">
 
     var _gaq = _gaq || [];
@@ -56,16 +55,21 @@
 
 </div></div> <!-- /#header-inner, /#header -->
 
-<h1>SPDX License Exceptions List</h1>
-<p>The SPDX License Exceptions List is a list of commonly found exceptions to open source software licenses. </p>
+<h1>License Exceptions</h1>
 
+<div style="color:red">This is a release candidate of the SPDX License List.  The official, current version is at: <a href="http://spdx.org/licenses/">http://spdx.org/licenses/</a></div>
+
+<p>The SPDX License List also includes a list of commonly found exceptions to open source licenses.  These exceptions can be used with the <a href="">License Expression Syntax</a> operator, "WITH" to create a license with an exception.  </p>
+
+<p>Back to the <a href="index.html">SPDX License List</a> index page.</p>
+      
 <p>Other information relevant to the SPDX License List:</p>
 <ul style="list-style-type: square; padding: 5px;">
-      <li style="margin:0px 0 5px 10px;"><a href="http://spdx.org/spdx-license-list/license-list-overview">Overview</a>: For general information about the SPDX License List, including principles for inclusion of a license and an explanation of the field contained on the list.</li>
-      <li style="margin:0px 0 5px 10px;"><a href="index.html">License List</a>: For a list of common open source licenses.</li>
-      <li style="margin:5px 0 5px 10px;"><a href="http://spdx.org/spdx-license-list/request-new-license">Request New License</a>: For instructions on how to propose additional licenses be added to the SPDX License List.</li>
-      <li style="margin:5px 0 5px 10px;"><a href="http://spdx.org/spdx-license-list/matching-guidelines">Matching Guidelines</a>:  Guidelines for what constitutes a license match to the SPDX License List when generating an SPDX file.</li>
-      <li style="margin:5px 0 5px 10px;"><a href="http://git.spdx.org/?p=license-list.git;a=summary">Master Files</a>:  The HTML pages you see here are generated from the master files for the SPDX License List.  The master files include both a spreadsheet listing all the licenses and fields; and the text for each license in a .txt file.  These files are available in a Git repository.</li>
+      <li style="margin:5px 0 5px 10px;"><a href="http://git.spdx.org/?p=license-list.git;a=summary"><strong>Master Files</strong></a>:  The HTML pages you see here are generated from the master files for the SPDX License List.  The master files include both a spreadsheet listing all the licenses and fields, deprecated licenses, and license exceptions; and the text for each license in a .txt file.  These files are available in a Git repository.</li>
+      <li style="margin:0px 0 5px 10px;"><a href="http://spdx.org/spdx-license-list/license-list-overview"><strong>Overview</strong></a>: For general information about the SPDX License List, including principles for inclusion of a license and an explanation of the fields contained on the list.</li>
+      <li style="margin:5px 0 5px 10px;"><a href="http://spdx.org/spdx-license-list/matching-guidelines"><strong>Matching Guidelines</strong></a>:  Guidelines for what constitutes a license match to the SPDX License List.</li>
+      <li style="margin:5px 0 5px 10px;"><a href="http://spdx.org/spdx-license-list/request-new-license"><strong>Request New License</strong></a>: For instructions on how to propose additional licenses or license exceptions be added to the SPDX License List.</li>
+      
 </ul>
 
 <p><strong>Version:</strong> {{version}}</p>
