--- a/resources/htmlTemplate/TocHTMLTemplate.html
+++ b/resources/htmlTemplate/TocHTMLTemplate.html
@@ -10,11 +10,10 @@
 <head>
   <title>SPDX License List</title>
   <link rel="shortcut icon" href="sites/all/themes/spdx/favicon.ico" type="image/x-icon" />
-  <link rel="stylesheet" href="screen.css" media="screen" type="text/css" />
-  <link type="text/css" rel="stylesheet" media="all" href="sites/all/themes/spdx/universe_nav.css?a" />
   <link type="text/css" rel="stylesheet" media="all" href="sites/all/themes/spdx/style.css?a" />
-  <link type="text/css" rel="stylesheet" media="all" href="sites/all/themes/spdx/zen.css?a" />
+    <link rel="stylesheet" href="screen.css" media="screen" type="text/css" />
   <script type="text/javascript">
+
 
     var _gaq = _gaq || [];
     _gaq.push(['_setAccount', 'UA-3676394-2']);
@@ -57,18 +56,23 @@
 </div></div> <!-- /#header-inner, /#header -->
 
 <h1>SPDX License List</h1>
-<p>The SPDX License List is a list of commonly found open source software licenses for the purposes of being able to easily and efficiently identify such licenses in an SPDX document. The SPDX License List includes a standardized short identifier, full name for each license, vetted license text, other basic information, and a canonical permanent URL. By providing a short identifier, users can efficiently refer to a license without having to redundantly reproduce the full license.</p>
+
+<div style="color:red">This is a release candidate of the SPDX License List.  The official, current version is at: <a href="http://spdx.org/licenses/">http://spdx.org/licenses/</a></div>
+
+<p>The SPDX License List is a list of commonly found open source software licenses for the purposes of being able to easily and efficiently identify such licenses in an SPDX document or elsewhere. The SPDX License List includes a standardized short identifier, full name for each license, vetted license text, other basic information, and a canonical permanent URL. By providing a short identifier, users can efficiently refer to a license without having to redundantly reproduce the full license.</p>
+
+<p>The SPDX License List also includes a list of commonly found exceptions to open source licenses.  These exceptions can be used with the <a href="">License Expression Syntax</a> operator, "WITH" to create a license with an exception.  The list of <strong>License Exceptions</strong> can be found <a href="./exceptions-index.html"><strong>here</strong></a></p>
 
 <p>Other information relevant to the SPDX License List:</p>
 <ul style="list-style-type: square; padding: 5px;">
-      <li style="margin:0px 0 5px 10px;"><a href="http://spdx.org/spdx-license-list/license-list-overview">Overview</a>: For general information about the SPDX License List, including principles for inclusion of a license and an explanation of the field contained on the list.</li>
-      <li style="margin:0px 0 5px 10px;"><a href="./exceptions-index.html">Exceptions</a>: List of standard license exceptions that can be used in a License Expression.</li>
-      <li style="margin:5px 0 5px 10px;"><a href="http://spdx.org/spdx-license-list/request-new-license">Request New License</a>: For instructions on how to propose additional licenses be added to the SPDX License List.</li>
-      <li style="margin:5px 0 5px 10px;"><a href="http://spdx.org/spdx-license-list/matching-guidelines">Matching Guidelines</a>:  Guidelines for what constitutes a license match to the SPDX License List when generating an SPDX file.</li>
-      <li style="margin:5px 0 5px 10px;"><a href="http://git.spdx.org/?p=license-list.git;a=summary">Master Files</a>:  The HTML pages you see here are generated from the master files for the SPDX License List.  The master files include both a spreadsheet listing all the licenses and fields; and the text for each license in a .txt file.  These files are available in a Git repository.</li>
+      <li style="margin:5px 0 5px 10px;"><a href="http://git.spdx.org/?p=license-list.git;a=summary"><strong>Master Files</strong></a>:  The HTML pages you see here are generated from the master files for the SPDX License List.  The master files include both a spreadsheet listing all the licenses and fields, deprecated licenses, and license exceptions; and the text for each license in a .txt file.  These files are available in a Git repository.</li>
+      <li style="margin:0px 0 5px 10px;"><a href="http://spdx.org/spdx-license-list/license-list-overview"><strong>Overview</strong></a>: For general information about the SPDX License List, including principles for inclusion of a license and an explanation of the fields contained on the list.</li>
+      <li style="margin:5px 0 5px 10px;"><a href="http://spdx.org/spdx-license-list/matching-guidelines"><strong>Matching Guidelines</strong></a>:  Guidelines for what constitutes a license match to the SPDX License List.</li>
+      <li style="margin:5px 0 5px 10px;"><a href="http://spdx.org/spdx-license-list/request-new-license"><strong>Request New License</strong></a>: For instructions on how to propose additional licenses or license exceptions be added to the SPDX License List.</li>
+      
 </ul>
 
-<p><strong>Version:</strong><code property="spdx:licenseListVersion">{{version}}</code></p>
+<p><strong>Version: </strong><code property="spdx:licenseListVersion">{{version}}</code></p>
 
 <h2 style="color: #003F69;">Licenses</h2>
 <table>
@@ -100,13 +104,7 @@ operator after a license short identifier to indicate “or later version”
 (e.g. GPL-2.0+), and it also supports the ability to declare an SPDX-identified 
 license exception using the “WITH” operator (e.g. GPL-2.0+ WITH 
 Autoconf-exception-2.0). SPDX has defined a list of License Exceptions to 
-use after the “WITH” operator. A number of the License Exceptions were formerly 
-included in the SPDX License List, but they have been deprecated as licenses, 
-and correct usage employs the new license expression syntax. Note that for 
-compatibility, the URL to each deprecated license still exists, but links to 
-those deprecated licenses have been removed from the SPDX License List in order 
-to clarify the currently recommended syntax.  Other licenses may have been 
-deprecated for reasons noted.
+use after the “WITH” operator. As a result, a number of licenses formerly included in the SPDX License List have been deprecated as licenses, and correct usage employs the License Expression Syntax as of v2.0. The URL to each deprecated license still exists and those license pages have been updated to note the deprecation. Other licenses may have been deprecated for reasons noted.
 </p>
 <table>
   <thead><tr>
