Completed tool to compare 2 docuements.  Merge utility and compare multiple documents utilities are both unstable with unit test failure (they need to be updated to handle multple packages per document).
Signed-off-by: goneall <gary@sourceauditor.com>

--- a/Test/resources/valid-with-explicit-base.html
+++ b/Test/resources/valid-with-explicit-base.html
@@ -15,7 +15,7 @@
     </style>
     <base href="http://example.com/some-analysis"/>
   </head>
-  <body typeof="spdx:Analysis">
+  <body typeof="spdx:SpdxDocument">
     <h1>Intellectual property analysis of <a href="http://zlib.net/zlib-1.2.5.tar.gz"
                                             rel="spdx:describesPackage"><span about="http://zlib.net/zlib-1.2.5.tar.gz" typeof="spdx:Package" property="spdx:name">zlib 1.2.5 Source</span></a></h1>
       
@@ -97,7 +97,7 @@
           <td property="spdx:fileType">source</td>
           <td><a href="http://spdx.com/licenses/zlib" rel="spdx:licensingInFile">Zlib</a></td>
           <td rel="spdx:checksum">
-            <div typeof="spdx:Checksum"><span rel="spdx:algorithm" resource="spdx:sha1">SHA1</span>:<span property="spdx:checksumValue">2d28c862903817066d69489bac1c098468924973</span></div>
+            <div typeof="spdx:Checksum"><span rel="spdx:algorithm" resource="spdx:checksumAlgorithm_sha1">checksumAlgorithm_sha1</span>:<span property="spdx:checksumValue">2d28c862903817066d69489bac1c098468924973</span></div>
           </td>
           <td rel="spdx:copyrightText" resource="spdx:unknown">unknown</td>
         </tr>
@@ -107,7 +107,7 @@
           <td property="spdx:fileType">other</td>
           <td><a href="http://spdx.org/licenses/Zlib" rel="spdx:licensingInFile">Zlib</a></td>
           <td><a href="http://spdx.org/licenses/Zlib" rel="spdx:licensingConcluded">Zlib</a></td>
-          <td rel="spdx:checksum"><div typeof="spdx:Checksum"><span rel="spdx:algorithm" resource="spdx:sha1">SHA1</span>:<span property="spdx:checksumValue">2287492b17695ba12233b5a967ba606f54a1477b</span></div></td>
+          <td rel="spdx:checksum"><div typeof="spdx:Checksum"><span rel="spdx:algorithm" resource="spdx:checksumAlgorithm_sha1">SHA1</span>:<span property="spdx:checksumValue">2287492b17695ba12233b5a967ba606f54a1477b</span></div></td>
           <td rel="spdx:copyrightText" resource="spdx:unknown">unknown</td>
         </tr>
                 
