--- a/resources/htmlTemplate/LicenseHTMLTemplate.html
+++ b/resources/htmlTemplate/LicenseHTMLTemplate.html
@@ -67,7 +67,7 @@
 <div style="color:red">This license has been deprecated since {{deprecatedVersion}}.</div>
 {{/deprecated}}
 <h2 style="color: #003F69;">Full name</h2>
-    <div property="spdx:name"><p style="margin-left: 20px;">{{licenseName}}</p></div>
+    <p style="margin-left: 20px;"><code property="spdx:name">{{licenseName}}</code></p>
 
 <h2 style="color: #003F69;">Short identifier</h2>
     <p style="margin-left: 20px;"><code property="spdx:licenseId">{{licenseId}}</code></p>
