--- a/resources/htmlTemplate/SpdxHTMLTemplate.html
+++ b/resources/htmlTemplate/SpdxHTMLTemplate.html
@@ -7,6 +7,10 @@
 </head>
 <body>
 <h2>SPDX Document Information</h2>
+<h3>Document Name</h3>
+{{documentName}}
+<h3>Document URI</h3>
+{{documentUri}}
 <h3>SPDX Version</h3>
 {{specVersion}}
 <h3>Data License</h3>
@@ -30,7 +34,6 @@ License List Version: {{licenseListVersion}}
 Document Comment: {{docComment}}<br />
 {{/docComment}}
 <h2>Reviewer Information</h2>
-<ul>
 	{{#reviewed}}
 	<li>
 		Reviewer: {{reviewer}}; Review Date: {{reviewDate}}
