Updated RdfToHTML to the SPDX 2.0 spec
Signed-off-by: goneall <gary@sourceauditor.com>

--- a/resources/htmlTemplate/SpdxHTMLTemplate.html
+++ b/resources/htmlTemplate/SpdxHTMLTemplate.html
@@ -64,9 +64,11 @@ Supplier: {{supplier}}<br />
 {{#originator}}
 Originator: {{originator}}<br />
 {{/originator}}
+<ul>
 {{#checksum}}
-Checksum: {{checksum}}<br />
+<li>Checksum: {{checksum}}</li>
 {{/checksum}}
+</ul>
 {{#packageVerificationCode}}
 <h3>Package Verification Code</h3>
 Value: {{packageVerificationCodeValue}}
