--- a/resources/htmlTemplate/ExceptionsTocHTMLTemplate.html
+++ b/resources/htmlTemplate/ExceptionsTocHTMLTemplate.html
@@ -56,15 +56,13 @@
 </div></div> <!-- /#header-inner, /#header -->
 
 <h1>License Exceptions</h1>
-<p>The SPDX License List also includes a list of commonly found exceptions to open source licenses.  These exceptions can be used with the <a href="">License Expression Syntax</a> operator, "WITH" to create a license with an exception.  </p>
+<p>The SPDX License List includes a list of commonly found exceptions to open source licenses.  These exceptions can be used with the <a href="http://spdx.org/SPDX-specifications/spdx-version-2.0">License Expression Syntax</a> operator, "WITH" to create a license with an exception  </p>
 
-<p>Back to the <a href="index.html">SPDX License List</a> index page.</p>
-      
-<p>Other information relevant to the SPDX License List:</p>
 <ul style="list-style-type: square; padding: 5px;">
-      <li style="margin:5px 0 5px 10px;"><a href="http://git.spdx.org/?p=license-list.git;a=summary"><strong>Master Files</strong></a>:  The HTML pages you see here are generated from the master files for the SPDX License List.  The master files include both a spreadsheet listing all the licenses and fields, deprecated licenses, and license exceptions; and the text for each license in a .txt file.  These files are available in a Git repository.</li>
+      <li style="margin:5px 0 5px 10px;"><a href="index.html"><strong>SPDX License List</strong></a>: The list of commonly found open source licenses for the purposes of being able to easily and efficiently identify such licenses in an SPDX document or elsewhere.</li>    
+      <li style="margin:5px 0 5px 10px;"><a href="http://git.spdx.org/?p=license-list.git;a=summary"><strong>Master Files</strong></a>:  The HTML pages you see here are generated from the master files for the SPDX License List.  The master files include a spreadsheet listing all the licenses, deprecated licenses, and license exceptions; and the text for each license in a .txt file.  These files are available in a Git repository.</li>
       <li style="margin:0px 0 5px 10px;"><a href="http://spdx.org/spdx-license-list/license-list-overview"><strong>Overview</strong></a>: For general information about the SPDX License List, including principles for inclusion of a license and an explanation of the fields contained on the list.</li>
-      <li style="margin:5px 0 5px 10px;"><a href="http://spdx.org/spdx-license-list/matching-guidelines"><strong>Matching Guidelines</strong></a>:  Guidelines for what constitutes a license match to the SPDX License List.</li>
+      <li style="margin:5px 0 5px 10px;"><a href="http://spdx.org/spdx-license-list/matching-guidelines"><strong>Matching Guidelines</strong></a>:  Guidelines for what constitutes a license match to the SPDX License List. For licenses that include markup, the license text on the HTML pages here will display omitable text in blue and replaceable text in red (see Guideline #2 for more information).</li>
       <li style="margin:5px 0 5px 10px;"><a href="http://spdx.org/spdx-license-list/request-new-license"><strong>Request New License</strong></a>: For instructions on how to propose additional licenses or license exceptions be added to the SPDX License List.</li>
       
 </ul>
