--- a/resources/htmlTemplate/SpdxDocHTMLTemplate.html
+++ b/resources/htmlTemplate/SpdxDocHTMLTemplate.html
@@ -9,8 +9,8 @@
 <h2>SPDX Document Information</h2>
 <h3>Document Name</h3>
 {{documentName}}
-<h3>Document URI</h3>
-{{documentUri}}
+<h3>Document Namespace</h3>
+{{documentNamespace}}
 <h3>SPDX Version</h3>
 {{specVersion}}
 <h3>Data License</h3>
