Update and fix the license RDFa parser - fixed bad link on the exceptions page, added formatting

--- a/resources/htmlTemplate/ExceptionHTMLTemplate.html
+++ b/resources/htmlTemplate/ExceptionHTMLTemplate.html
@@ -72,7 +72,7 @@
 <h2 style="color: #003F69;">Other web pages for this exception</h2>
     <p style="margin-left: 20px;">
     {{#getSourceUrl}}
-    <li><a href="{{seeAlso}}" rel="rdfs:seeAlso">{{getSourceUrl}}</a></li>
+    <li><a href="{{&getSourceUrl}}" rel="rdfs:seeAlso">{{getSourceUrl}}</a></li>
     {{/getSourceUrl}}
     </p>
     
