Fix formatting for license headers in the LicenseRDFaGenerator.

--- a/resources/htmlTemplate/LicenseHTMLTemplate.html
+++ b/resources/htmlTemplate/LicenseHTMLTemplate.html
@@ -96,7 +96,7 @@
 <h2 style="color: #003F69;"  id="licenseText">Standard License Header</h2>
 <div property="spdx:standardLicenseHeader" class="license-text">
   {{^licenseHeader}}<p style="font-style: italic">There is no standard license header for the license</p>{{/licenseHeader}}
-  {{licenseHeader}}
+  {{&licenseHeader}}
 </div>
 
     <div id="bottom-links" class="clearfix" style="margin-right: 10px;margin-top:20px;background:#ADDAF2;color:#000;"><div class="region region-bottom-links">
