1318: Fixing template error resulting in duplicate and unfriendly display of creator info. Contributed under Apache 2.0 lincense.
Signed-off-by: Yev Bronshteyn <ybronshteyn@blackducksoftware.com>

--- a/resources/htmlTemplate/SpdxDocHTMLTemplate.html
+++ b/resources/htmlTemplate/SpdxDocHTMLTemplate.html
@@ -19,7 +19,7 @@
 {{#creationInfo}}
 	<ul>
 	{{#creator}}
-	<li>Creator: {{creator}}</li>
+	<li>Creator: {{.}}</li>
 	{{/creator}}
 	</ul>
 Created on: {{created}}<br />
