Bug-1319: Template handling for potentially multiline fields.
Signed-off-by: Yev Bronshteyn <ybronshteyn@blackducksoftware.com>

--- a/resources/htmlTemplate/LicensesHTMLTemplate.html
+++ b/resources/htmlTemplate/LicensesHTMLTemplate.html
@@ -4,6 +4,21 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <!-- Generated from the SPDX Viewer tools (see spdx.org/tools) -->
 <title>{{name}}</title>
+<style>
+	.Table
+	{
+	display: table;
+	}
+	.Row
+	{
+	display: table-row;
+	}
+	.Cell
+	{
+	display: table-cell;
+	padding-right: 5px;
+	}
+</style>
 </head>
 <body>
 <h2>SPDX Extracted License Information</h2>
