--- a/resources/htmlTemplate/SpdxDocHTMLTemplate.html
+++ b/resources/htmlTemplate/SpdxDocHTMLTemplate.html
@@ -39,19 +39,25 @@
 	</ul>
 Created on: {{created}}<br />
 {{#comment}}
-<div class="Row"><div class="Cell">Creator comment: </div><div class="Cell">{{comment}}</div></div><br />
+<div class = table>
+	<div class="Row"><div class="Cell">Creator comment: </div><div class="Cell">{{comment}}</div></div><br />
+</div>
 {{/comment}} <br />
 {{#licenseListVersion}}
 License List Version: {{licenseListVersion}}
 {{/licenseListVersion}} <br />
 {{/creationInfo}}
 {{#docComment}}
-<div class="Row"><div class="Cell">Document Comment: </div><div class="Cell">{{docComment}}</div></div><br />
+<div class="Table">
+	<div class="Row"><div class="Cell">Document Comment: </div><div class="Cell">{{docComment}}</div></div><br />
+</div>
 {{/docComment}}
 <h2>Annotations</h2>
 {{#annotations}}
 Annotator: {{annotator}}<br />
-<div class="Row"><div class="Cell">Comment: </div><div class="Cell">{{comment}}</div></div><br />
+<div class="Table">
+	<div class="Row"><div class="Cell">Comment: </div><div class="Cell">{{comment}}</div></div><br />
+</div>
 Date: {{date}}<br />
 Annotation Type: {{annotationTypeTag}}<br />
 <br />
