--- a/resources/htmlTemplate/SpdxDocHTMLTemplate.html
+++ b/resources/htmlTemplate/SpdxDocHTMLTemplate.html
@@ -40,8 +40,8 @@
 Created on: {{created}}<br />
 {{#comment}}
 <div class = table>
-	<div class="Row"><div class="Cell">Creator comment: </div><div class="Cell">{{comment}}</div></div><br />
-</div>
+	<div class="Row"><div class="Cell">Creator comment: </div><div class="Cell">{{comment}}</div></div>
+</div><br />
 {{/comment}} <br />
 {{#licenseListVersion}}
 License List Version: {{licenseListVersion}}
@@ -49,15 +49,15 @@ License List Version: {{licenseListVersion}}
 {{/creationInfo}}
 {{#docComment}}
 <div class="Table">
-	<div class="Row"><div class="Cell">Document Comment: </div><div class="Cell">{{docComment}}</div></div><br />
-</div>
+	<div class="Row"><div class="Cell">Document Comment: </div><div class="Cell">{{docComment}}</div></div>
+</div><br />
 {{/docComment}}
 <h2>Annotations</h2>
 {{#annotations}}
 Annotator: {{annotator}}<br />
 <div class="Table">
-	<div class="Row"><div class="Cell">Comment: </div><div class="Cell">{{comment}}</div></div><br />
-</div>
+	<div class="Row"><div class="Cell">Comment: </div><div class="Cell">{{comment}}</div></div>
+</div><br />
 Date: {{date}}<br />
 Annotation Type: {{annotationTypeTag}}<br />
 <br />
