--- a/resources/htmlTemplate/ExceptionHTMLTemplate.html
+++ b/resources/htmlTemplate/ExceptionHTMLTemplate.html
@@ -72,7 +72,7 @@
 <h2 style="color: #003F69;">Other web pages for this exception</h2>
     <p style="margin-left: 20px;">
     {{#getSourceUrl}}
-    <li><a href="{{&getSourceUrl}}" rel="rdfs:seeAlso">{{getSourceUrl}}</a></li>
+    <li><a href="{{&.}}" rel="rdfs:seeAlso">{{&.}}</a></li>
     {{/getSourceUrl}}
     </p>
     
