Updated templates for the license RDFa Generator
Signed-off-by: goneall <gary@sourceauditor.com>

--- a/resources/htmlTemplate/ExceptionHTMLTemplate.html
+++ b/resources/htmlTemplate/ExceptionHTMLTemplate.html
@@ -43,6 +43,14 @@
       #page h2, h3, h4, h5 {
         color: #4597cb;
       }
+       
+      #page h1 {
+      font-size: 2em;
+      }
+
+      #page h2 {
+      font-size: 1.5em;
+      }
 
       #page p {
         color: #58595b;
@@ -58,6 +66,21 @@
 
       #footer-copyright {
         margin-top: 25px;
+      }
+            .replacable-license-text {
+      color: #CC0000;
+      }
+
+      .optional-license-text {
+      color: #0000cc;
+      }
+           
+      .replacable-license-text {
+      color: #CC0000;
+      }
+
+      .optional-license-text {
+      color: #0000cc;
       }
 
     </style>
