--- a/resources/htmlTemplate/ExceptionsTocHTMLTemplate.html
+++ b/resources/htmlTemplate/ExceptionsTocHTMLTemplate.html
@@ -48,16 +48,33 @@
         color: #58595b;
       }
 
-      #page th {
-        color: #58595b;
-      }
-
       a, a:visited, a:hover {
         color: #4597cb;
       }
 
       #footer-copyright {
         margin-top: 25px;
+      }
+      table {
+        border-collapse: collapse;
+      }
+
+      th {
+        padding: 3px;
+        text-align: left;
+        border: 1px solid gray;
+        background-color: #003f69;
+        color: #ffffff;
+      }
+      
+      tbody tr:nth-child(even) {
+        background-color: #dddddd;
+      }
+
+      td {
+        padding: 3px;
+        text-align: left;
+        border: 1px solid gray;
       }
 
     </style>
