--- a/resources/htmlTemplate/ExceptionHTMLTemplate.html
+++ b/resources/htmlTemplate/ExceptionHTMLTemplate.html
@@ -17,11 +17,11 @@
     <link rel="shortcut icon" href="sites/all/themes/cpstandard/favicon.ico" type="image/vnd.microsoft.icon" />
     <link type="text/css" rel="stylesheet" media="all" href="sites/all/themes/cpstandard/css/style.css" />
     <link type="text/css" rel="stylesheet" media="all" href="sites/all/themes/cpstandard/css/colors.css" />
-    <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+    <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet" />
     <!-- GOOGLE FONTS -->
-    <link href='//fonts.googleapis.com/css?family=Roboto:400,400italic,300,300italic,100italic,100,500,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
+    <link href='//fonts.googleapis.com/css?family=Roboto:400,400italic,300,300italic,100italic,100,500,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css' />
 
-    <style>
+    <style type="text/css">
 
       #page {
         color: #58595b;
@@ -109,7 +109,7 @@
     </div>
   </div>
 
-  <header id="header">
+  <div id="header">
     <div id="header-inner">
       <a href="/" title="Home" rel="home" id="logo">
         <img src="https://spdx.linuxfound.info/sites/cpstandard/files/logo_spdx_250.png" alt="Home" />
@@ -122,7 +122,7 @@
       </div>
       
     </div>
-  </header> <!-- /header -->
+  </div> <!-- /header -->
 
   <div id="highlighted">  
       <div class="region region-highlighted">
@@ -144,11 +144,13 @@
           <p style="margin-left: 20px;"><code property="spdx:licenseExceptionId">{{id}}</code></p>
 
       <h2>Other web pages for this exception</h2>
-          <p style="margin-left: 20px;">
+          <div style="margin-left: 20px;">
+          <ul>
           {{#getSourceUrl}}
           <li><a href="{{&.}}" rel="rdfs:seeAlso">{{&.}}</a></li>
           {{/getSourceUrl}}
-          </p>
+          </ul>
+          </div>
           
       <h2 id="notes">Notes</h2>
           <p style="margin-left: 20px;">{{notes}}</p>
@@ -170,7 +172,7 @@
       <div class="gray-diagonal">
         <div class="container">
           <div id="footer-copyright">
-            <p>&copy; 2016          SPDX Workgroup a Linux Foundation Collaborative Project. All Rights Reserved.        </p>
+            <p>(c) 2016          SPDX Workgroup a Linux Foundation Collaborative Project. All Rights Reserved.        </p>
             <p>Linux Foundation is a registered trademark of The Linux Foundation. Linux is a registered <a href="http://www.linuxfoundation.org/programs/legal/trademark" title="Linux Mark Institute">trademark</a> of Linus Torvalds.</p>
             <p>Please see our <a href="http://www.linuxfoundation.org/privacy">privacy policy</a> and <a href="http://www.linuxfoundation.org/terms">terms of use</a>.</p>
           </div>
