--- a/resources/htmlTemplate/ExceptionsTocHTMLTemplate.html
+++ b/resources/htmlTemplate/ExceptionsTocHTMLTemplate.html
@@ -17,11 +17,11 @@
     <link rel="shortcut icon" href="sites/all/themes/cpstandard/favicon.ico" type="image/vnd.microsoft.icon" />
     <link type="text/css" rel="stylesheet" media="all" href="sites/all/themes/cpstandard/css/style.css" />
     <link type="text/css" rel="stylesheet" media="all" href="sites/all/themes/cpstandard/css/colors.css" />
-    <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+    <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet" />
     <!-- GOOGLE FONTS -->
-    <link href='//fonts.googleapis.com/css?family=Roboto:400,400italic,300,300italic,100italic,100,500,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
+    <link href='//fonts.googleapis.com/css?family=Roboto:400,400italic,300,300italic,100italic,100,500,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css' />
 
-    <style>
+    <style type="text/css">
 
       #page {
         color: #58595b;
@@ -105,7 +105,7 @@
     </div>
   </div>
 
-  <header id="header">
+  <div id="header">
     <div id="header-inner">
       <a href="/" title="Home" rel="home" id="logo">
         <img src="https://spdx.linuxfound.info/sites/cpstandard/files/logo_spdx_250.png" alt="Home" />
@@ -118,7 +118,7 @@
       </div>
       
     </div>
-  </header> <!-- /header -->
+  </div> <!-- /header -->
 
   <div id="highlighted">  
       <div class="region region-highlighted">
@@ -128,7 +128,7 @@
     <div id="page" class="page">
 
       <h1>License Exceptions</h1>
-      <p>The SPDX License List includes a list of commonly found exceptions to open source licenses.  These exceptions can be used with the <strong><a href="http://spdx.org/SPDX-specifications/spdx-version-2.0">License Expression Syntax</strong></a> operator, "WITH" to identify a license with an exception.</p>
+      <p>The SPDX License List includes a list of commonly found exceptions to open source licenses.  These exceptions can be used with the <a href="http://spdx.org/SPDX-specifications/spdx-version-2.0"><strong>License Expression Syntax</strong></a> operator, "WITH" to identify a license with an exception.</p>
 
       <ul style="list-style-type: square; padding: 5px;">
             <li style="margin:5px 0 5px 10px;"><a href="index.html"><strong>SPDX License List</strong></a>: The list of commonly found open source licenses for the purposes of being able to easily and efficiently identify such licenses.</li>
@@ -165,7 +165,7 @@
       <div class="gray-diagonal">
         <div class="container">
           <div id="footer-copyright">
-            <p>&copy; 2016          SPDX Workgroup a Linux Foundation Collaborative Project. All Rights Reserved.        </p>
+            <p>(c) 2016          SPDX Workgroup a Linux Foundation Collaborative Project. All Rights Reserved.        </p>
             <p>Linux Foundation is a registered trademark of The Linux Foundation. Linux is a registered <a href="http://www.linuxfoundation.org/programs/legal/trademark" title="Linux Mark Institute">trademark</a> of Linus Torvalds.</p>
             <p>Please see our <a href="http://www.linuxfoundation.org/privacy">privacy policy</a> and <a href="http://www.linuxfoundation.org/terms">terms of use</a>.</p>
           </div>
