--- a/resources/htmlTemplate/LicenseHTMLTemplate.html
+++ b/resources/htmlTemplate/LicenseHTMLTemplate.html
@@ -17,11 +17,11 @@
     <link rel="shortcut icon" href="sites/all/themes/cpstandard/favicon.ico" type="image/vnd.microsoft.icon" />
     <link type="text/css" rel="stylesheet" media="all" href="sites/all/themes/cpstandard/css/style.css" />
     <link type="text/css" rel="stylesheet" media="all" href="sites/all/themes/cpstandard/css/colors.css" />
-    <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+    <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet" />
     <!-- GOOGLE FONTS -->
-    <link href='//fonts.googleapis.com/css?family=Roboto:400,400italic,300,300italic,100italic,100,500,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
+    <link href='//fonts.googleapis.com/css?family=Roboto:400,400italic,300,300italic,100italic,100,500,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css' />
 
-    <style>
+    <style type="text/css">
 
       #page {
         color: #58595b;
@@ -103,7 +103,7 @@
     </div>
   </div>
 
-  <header id="header">
+  <div id="header">
     <div id="header-inner">
       <a href="/" title="Home" rel="home" id="logo">
         <img src="https://spdx.linuxfound.info/sites/cpstandard/files/logo_spdx_250.png" alt="Home" />
@@ -116,7 +116,7 @@
       </div>
       
     </div>
-  </header> <!-- /header -->
+  </div> <!-- /header -->
 
   <div id="highlighted">  
       <div class="region region-highlighted">
@@ -143,14 +143,16 @@
           <p style="margin-left: 20px;"><code property="spdx:licenseId">{{licenseId}}</code></p>
 
       <h2>Other web pages for this license</h2>
-          <p style="margin-left: 20px;">
+          <div style="margin-left: 20px;">
+            <ul>
              {{#otherWebPages}}
              <li><a href="{{&url}}" rel="rdfs:seeAlso">{{site}}</a></li>
              {{/otherWebPages}}
              {{^otherWebPages}}
-             None
+             <li>None</li>
              {{/otherWebPages}}
-          </p>
+           </ul>
+          </div>
           
       <div property="spdx:isOsiApproved" style="display: none;">{{osiApproved}}</div>
 
@@ -163,7 +165,7 @@
       {{&licenseText}}
       </div>
 
-      <h2  id="licenseText">Standard License Header</h2>
+      <h2  id="licenseHeader">Standard License Header</h2>
       <div property="spdx:standardLicenseHeader" class="license-text">
         {{^licenseHeader}}<p style="font-style: italic">There is no standard license header for the license</p>{{/licenseHeader}}
         {{&licenseHeader}}
@@ -175,7 +177,7 @@
       <div class="gray-diagonal">
         <div class="container">
           <div id="footer-copyright">
-            <p>&copy; 2016          SPDX Workgroup a Linux Foundation Collaborative Project. All Rights Reserved.        </p>
+            <p>(c) 2016          SPDX Workgroup a Linux Foundation Collaborative Project. All Rights Reserved.        </p>
             <p>Linux Foundation is a registered trademark of The Linux Foundation. Linux is a registered <a href="http://www.linuxfoundation.org/programs/legal/trademark" title="Linux Mark Institute">trademark</a> of Linus Torvalds.</p>
             <p>Please see our <a href="http://www.linuxfoundation.org/privacy">privacy policy</a> and <a href="http://www.linuxfoundation.org/terms">terms of use</a>.</p>
           </div>
