--- a/resources/htmlTemplate/TocHTMLTemplate.html
+++ b/resources/htmlTemplate/TocHTMLTemplate.html
@@ -17,11 +17,11 @@
     <link rel="shortcut icon" href="sites/all/themes/cpstandard/favicon.ico" type="image/vnd.microsoft.icon" />
     <link type="text/css" rel="stylesheet" media="all" href="sites/all/themes/cpstandard/css/style.css" />
     <link type="text/css" rel="stylesheet" media="all" href="sites/all/themes/cpstandard/css/colors.css" />
-    <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+    <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet" />
     <!-- GOOGLE FONTS -->
-    <link href='//fonts.googleapis.com/css?family=Roboto:400,400italic,300,300italic,100italic,100,500,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
+    <link href='//fonts.googleapis.com/css?family=Roboto:400,400italic,300,300italic,100italic,100,500,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css' />
 
-    <style>
+    <style type="text/css">
 
       #page {
         color: #58595b;
@@ -110,7 +110,7 @@
     </div>
   </div>
 
-  <header id="header">
+  <div id="header">
     <div id="header-inner">
       <a href="/" title="Home" rel="home" id="logo">
         <img src="https://spdx.linuxfound.info/sites/cpstandard/files/logo_spdx_250.png" alt="Home" />
@@ -123,7 +123,7 @@
       </div>
       
     </div>
-  </header> <!-- /header -->
+  </div> <!-- /header -->
 
   <div id="highlighted">  
       <div class="region region-highlighted">
@@ -167,7 +167,7 @@ Note: You can sort by each column by clicking on the column header.
         </tbody>
       </table>
 
-      <hr>
+      <hr />
       <h2>Deprecated Licenses</h2>
       <p>
       Release 2.0 of the SPDX Specification introduces <strong><a href="http://spdx.org/SPDX-specifications/spdx-version-2.0">License Expression Syntax</a></strong> that supports the ability to identify common variations of SPDX-identified licenses without the need to define each potential variation as a distinct license on the SPDX License List. This new syntax supports the ability to use a simple “+” operator after a license short identifier to indicate “or later version” (e.g. GPL-2.0+). It also supports the ability to declare an SPDX-identified <a href="./exceptions-index.html"><strong>license exception</strong></a> using the “WITH” operator (e.g. GPL-2.0+ WITH Autoconf-exception-2.0). SPDX has defined a list of license exceptions to use after the “WITH” operator. As a result, a number of licenses formerly included in the SPDX License List have been deprecated as licenses, and correct usage employs the License Expression Syntax as of v2.0. The URL to each deprecated license still exists and those license pages have been updated to note the deprecation. Other licenses may have been deprecated for reasons noted.
@@ -195,7 +195,7 @@ Note: You can sort by each column by clicking on the column header.
       <div class="gray-diagonal">
         <div class="container">
           <div id="footer-copyright">
-            <p>&copy; 2016          SPDX Workgroup a Linux Foundation Collaborative Project. All Rights Reserved.        </p>
+            <p>(c) 2016          SPDX Workgroup a Linux Foundation Collaborative Project. All Rights Reserved.        </p>
             <p>Linux Foundation is a registered trademark of The Linux Foundation. Linux is a registered <a href="http://www.linuxfoundation.org/programs/legal/trademark" title="Linux Mark Institute">trademark</a> of Linus Torvalds.</p>
             <p>Please see our <a href="http://www.linuxfoundation.org/privacy">privacy policy</a> and <a href="http://www.linuxfoundation.org/terms">terms of use</a>.</p>
           </div>
