Partial implementation of license XML for website + implemented SPDX 2.1 package filesAnalyzed field
Signed-off-by: goneall <gary@sourceauditor.com>

--- a/resources/htmlTemplate/ExceptionsTocHTMLTemplate.html
+++ b/resources/htmlTemplate/ExceptionsTocHTMLTemplate.html
@@ -92,7 +92,7 @@
       })();
 
     </script>
-
+    <script type="text/javascript" src="sorttable.js"></script>
   </head>
 
   <body typeof="rdf:Bag">
@@ -142,7 +142,7 @@
       <p><strong>Version:</strong> {{version}}</p>
 
       <h2>License Exceptions</h2>
-      <table>
+      <table class="sortable">
         <thead><tr>
           <th>Full name</th><th>Identifier</th><th>Text</th>
         </tr></thead>
