LicenseRDFaGenerator - fix centering of OSI column on index page
Signed-off-by: Gary O'Neall <gary@sourceauditor.com>

--- a/resources/htmlTemplate/TocHTMLTemplate.html
+++ b/resources/htmlTemplate/TocHTMLTemplate.html
@@ -168,7 +168,7 @@ Note: You can sort by each column by clicking on the column header.
             <td><a href="{{&reference}}" rel="rdf:_{{refNumber}}">{{licenseName}}</a></td>
             <td about="{{&reference}}" typeof="spdx:License">
             <code property="spdx:licenseId">{{licenseId}}</code></td>
-            <td align="center">{{osiApproved}}</td>
+            <td style="text-align:center">{{osiApproved}}</td>
             <td><a href="{{&reference}}#licenseText">License Text</a></td>
           </tr>
           {{/listedLicenses}}
