--- a/resources/stdlicenses/exceptions-index.html
+++ b/resources/stdlicenses/exceptions-index.html
@@ -128,7 +128,7 @@
     <div id="page" class="page">
 
       <h1>License Exceptions</h1>
-      <p>The SPDX License List includes a list of commonly found exceptions to open source licenses.  These exceptions can be used with the <a href="http://spdx.org/SPDX-specifications/spdx-version-2.0"><strong>License Expression Syntax</strong></a> operator, "WITH" to identify a license with an exception.</p>
+      <p>The SPDX License List includes a list of commonly found exceptions to open source licenses.  These exceptions can be used with the <a href="https://spdx.org/specifications"><strong>License Expression Syntax</strong></a> operator, "WITH" to identify a license with an exception.</p>
 
       <ul style="list-style-type: square; padding: 5px;">
             <li style="margin:5px 0 5px 10px;"><a href="index.html"><strong>SPDX License List</strong></a>: The list of commonly found open source licenses for the purposes of being able to easily and efficiently identify such licenses.</li>
