Add logic to use <var> when there is no phrasing-content
Signed-off-by: Gary O'Neall <gary@sourceauditor.com>

--- a/resources/htmlTemplate/ExceptionHTMLTemplate.html
+++ b/resources/htmlTemplate/ExceptionHTMLTemplate.html
@@ -79,7 +79,7 @@
       color: #CC0000;
       }
       
-      .replacable-license-text p {
+      .replacable-license-text p var {
       color: #CC0000;
       }
 
@@ -87,7 +87,7 @@
       color: #0000cc;
       }
       
-      .optional-license-text p {
+      .optional-license-text p var {
       color: #0000cc;
       }
 
