--- a/resources/htmlTemplate/TocHTMLTemplate.html
+++ b/resources/htmlTemplate/TocHTMLTemplate.html
@@ -137,7 +137,7 @@
       <p>The SPDX License List is a list of commonly found licenses and exceptions used in free and open source and other collaborative software or documentation. The purpose of the SPDX License List is to enable 
       easy and efficient identification of such licenses and exceptions in an SPDX document, in source files 
       or elsewhere. The SPDX License List includes a standardized short identifier, full name, vetted license 
-	text including matching guidelines markup as appropriate, other information, and a canonical permanent 
+	text including matching guidelines markup as appropriate, and a canonical permanent 
       URL for each license and exception.   
       </p>
 
@@ -147,7 +147,7 @@
             <li style="margin:5px 0 5px 10px;"><a href="https://github.com/spdx/license-list-data"><strong>Data Files</strong></a>:  Machine readable files describing all of the licenses and license exceptions.</li>
             <li style="margin:0px 0 5px 10px;"><a href="http://spdx.org/spdx-license-list/license-list-overview"><strong>Overview</strong></a>: General information about the SPDX License List, including principles for inclusion of a license and an explanation of the fields contained on the list.</li>
             <li style="margin:5px 0 5px 10px;"><a href="http://spdx.org/spdx-license-list/matching-guidelines"><strong>Matching Guidelines</strong></a>:  Guidelines for what constitutes a license match to the SPDX License List. The license text on the HTML pages here will display omitable text in blue and replaceable text in red (see Guideline #2 for more information).</li>
-            <li style="margin:5px 0 5px 10px;"><a href="http://spdx.org/spdx-license-list/request-new-license"><strong>Request New License</strong></a>: For instructions on how to propose licenses or exceptions be added to the SPDX License List.</li>
+            <li style="margin:5px 0 5px 10px;"><a href="http://spdx.org/spdx-license-list/request-new-license"><strong>Request New License</strong></a>: Instructions for proposing a license or exception be added to the SPDX License List.</li>
 
       </ul>
 
