added note re: default sorting of table
added note re: default sorting of table by identifier

--- a/resources/htmlTemplate/TocHTMLTemplate.html
+++ b/resources/htmlTemplate/TocHTMLTemplate.html
@@ -153,7 +153,7 @@
 
       <p><strong>Version: </strong><code property="spdx:licenseListVersion">{{version}}</code></p>
       
-Note: You can sort by each column by clicking on the column header.
+Note: You can sort by each column by clicking on the column header. By default, the table sorts by the Identifier column.
 
       <table class="sortable">
         <thead><tr>
