Fix styling for list items on generated license list HTML
Signed-off-by: Gary O'Neall <gary@sourceauditor.com>

--- a/resources/htmlTemplate/ExceptionHTMLTemplate.html
+++ b/resources/htmlTemplate/ExceptionHTMLTemplate.html
@@ -90,6 +90,10 @@
       .optional-license-text p var {
       color: #0000cc;
       }
+      
+      ul, ol, li {
+      margin: 10px 0 10px 0;
+	  }
 
     </style>
 
