--- a/resources/htmlTemplate/ExceptionsTocHTMLTemplate.html
+++ b/resources/htmlTemplate/ExceptionsTocHTMLTemplate.html
@@ -76,6 +76,10 @@
         text-align: left;
         border: 1px solid gray;
       }
+      
+      ul, ol, li {
+      margin: 10px 0 10px 0;
+	  }
 
     </style>
 
