--- a/resources/htmlTemplate/LicenseHTMLTemplate.html
+++ b/resources/htmlTemplate/LicenseHTMLTemplate.html
@@ -83,7 +83,9 @@
       .optional-license-text p var {
       color: #0000cc;
       }
-
+      ul, ol, li {
+      margin: 10px 0 10px 0;
+	  }
     </style>
 
   <script type="text/javascript">
