--- a/resources/htmlTemplate/TocHTMLTemplate.html
+++ b/resources/htmlTemplate/TocHTMLTemplate.html
@@ -81,7 +81,9 @@
         text-align: left;
         border: 1px solid gray;
       }
-
+      ul, ol, li {
+      margin: 10px 0 10px 0;
+	  }
     </style>
 
     <script type="text/javascript">
